--- a/Parking_CS/Parking_CS.csproj
+++ b/Parking_CS/Parking_CS.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samochod.cs" />
+    <Compile Include="SamochodOkno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SamochodOkno.Designer.cs">
+      <DependentUpon>SamochodOkno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Sportowy.cs" />
     <EmbeddedResource Include="GlowneOkno.resx">
       <DependentUpon>GlowneOkno.cs</DependentUpon>
@@ -72,6 +78,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SamochodOkno.resx">
+      <DependentUpon>SamochodOkno.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
