--- a/Parking_CS/Parking_CS.csproj
+++ b/Parking_CS/Parking_CS.csproj
@@ -59,6 +59,12 @@
       <DependentUpon>GlowneOkno.cs</DependentUpon>
     </Compile>
     <Compile Include="Osobowy.cs" />
+    <Compile Include="OsobowyOkno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="OsobowyOkno.Designer.cs">
+      <DependentUpon>OsobowyOkno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Parametry.cs" />
     <Compile Include="Parking.cs" />
     <Compile Include="Program.cs" />
@@ -85,6 +91,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GlowneOkno.resx">
       <DependentUpon>GlowneOkno.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="OsobowyOkno.resx">
+      <DependentUpon>OsobowyOkno.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
