--- a/Parking_CS/Parking_CS.csproj
+++ b/Parking_CS/Parking_CS.csproj
@@ -64,7 +64,6 @@
       <DependentUpon>Osobowy.cs</DependentUpon>
     </Compile>
     <Compile Include="Parametry.cs" />
-    <Compile Include="Parking.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Samochod.cs">
@@ -73,9 +72,7 @@
     <Compile Include="Samochod.Designer.cs">
       <DependentUpon>Samochod.cs</DependentUpon>
     </Compile>
-    <Compile Include="Slot.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="Slot.cs" />
     <Compile Include="Sportowy.cs">
       <SubType>Form</SubType>
     </Compile>
